--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "tsc-watch --onSuccess \"node dist/ejercicio-1.js\"",
     "doc": "typedoc",
     "test": "vitest run",
-    "coverage": "vitest run --coverage --coverage.include src/*"
+    "coverage": "vitest run --coverage --coverage.include src/**/*"
   },
   "keywords": [],
   "author": "",
